@@ -1,0 +1,34 @@
+﻿########################################################
+# YouJizz VideoPortal
+########################################################
+start=http://www.youjizz.com/newest-clips/1.html
+catcher=youjizz.com
+########################################################
+# Videos
+########################################################
+item_infos=href='(/videos/[^"]+html)'.+?<img src="(http[^"]+jpg)">.+?<span id="[^"]+">([^"]+)</span>.+?>(\d+[:]\d+)</span></span>
+item_order=url|icon|title|title.append
+item_info_name=title.append
+item_info_build= (%s)
+item_info_name=type
+item_info_build=video
+item_url_build=http://www.youjizz.com%s
+########################################################
+# Next
+########################################################
+item_infos=<a href='(/[^<]*html)'>Next
+item_order=url
+item_skill=space|lock
+item_info_name=title
+item_info_build=video.devil.locale|30103
+item_info_name=icon
+item_info_build=video.devil.image|next.png
+item_url_build=http://www.youjizz.com%s
+########################################################
+# Search
+########################################################
+title=video.devil.locale|30102
+type=search
+icon=video.devil.image|search.png
+url=http://www.youjizz.com/search/%s-1.html
+########################################################
