@@ -1,3 +1,9 @@
+[B]Version 1.6.9[/B]
+
+- Updated: xhamster
+- Added: youjizz
+
+
 [B]Version 1.6.8[/B]
 
 - Updated: tube8, moviesand, keezmovies
